<resources>
    <string name="app_name">36Kr</string>
    <!-- 标题栏的名字 -->
    <string name="title_name">新闻</string>
    <!--抽屉开关-->
    <string name="drawer_open">open</string>
    <string name="drawer_close">close</string>
    <!-- 新闻界面 -->

    <string name="news_all">全部</string>
    <string name="news_early_item">早期项目</string>
    <string name="news_after_b_wheel">B轮后</string>
    <string name="news_big_company">大公司</string>
    <string name="news_capital">资本</string>
    <string name="news_depth">深度</string>
    <string name="news_research">研究</string>
    <string name="news_kr_tv">氪TV</string>


    <string name="recent_event_type_tv">活动类型</string>
    <string name="recent_event_time_tv">活动时间</string>

    <string name="change_code">修改密码</string>
    <string name="sure_change">确认修改</string>
    <string name="user_name">用户名</string>
    <string name="code">确认密码</string>
    <string name="password">密码</string>
    <string name="code_">密码(长度6-16位,支持数字,字母)</string>
    <string name="author">作者</string>
    <string name="lost_code">忘记密码</string>
    <string name="login">登录</string>

    <string name="search_aty_input_et">搜索新闻/用户/公司</string>
    <string name="search_aty_no_record_tv">无搜索记录</string>
    <string name="search_news">搜索新闻</string>
    <string name="relate_user">相关用户</string>
    <string name="relate_organization">相关机构</string>
    <string name="company">创业公司</string>
    <string name="more">更多</string>
    <string name="search_result">共搜到0篇文章</string>
    <string name="no_more">没有更多</string>
    <string name="search">搜索</string>

    <string name="message_setting">消息设置</string>
    <string name="video_wifi_setting">允许非Wi-Fi网络下播放视频</string>
    <string name="clean_cache">清理内存</string>
    <string name="about_36kr">关于36氪</string>
    <string name="check_new_version">检查新版本</string>
    <string name="advise">意见反馈</string>

    <string name="skip">跳过>></string>
    <string name="invest">股权投资</string>

    <string name="please_login">请登录</string>
    <string name="mine_message">我的消息</string>
    <string name="mine_order">我的订单</string>
    <string name="account_info">账户信息</string>
    <string name="authentication">跟投人认证</string>
    <string name="freshman_500_rmb">新人专享500元</string>
    <string name="favorite">我收藏的文章</string>
    <string name="invest_company">我投资的公司</string>
    <string name="mine_coupon">我的投资券</string>
    <string name="know_invest">了解股权投资</string>
    <string name="hot_line">客服热线</string>
    <string name="hot_line_number">400-995-3636</string>

    <string name="register_title">注册成为36氪用户,即享一站式创业服务</string>
    <string name="register">注册</string>
    <string name="agree_register">注册代表你同意</string>
    <string name="and">和</string>
    <string name="privacy_policy">隐私条款</string>
    <string name="network_protocol">36氪网络使用协议</string>

    <string name="guide_button_text">点击进入</string>

    <string name="find_investor_item_care_field_title_tv">关注领域:</string>
    <string name="find_investor_item_invest_stage_title_tv">投资阶段:</string>

    <string name="work_day">工作日:10:00-19:00</string>
    <string name="cell">呼叫 400-995-3636</string>
    <string name="cancel">取消</string>

    <string name="all">全部</string>
    <string name="recent_event_time_this_weekend">本周末</string>
    <string name="recent_event_time_this_week">本周</string>
    <string name="recent_event_time_next_week">下周</string>
    <string name="recent_event_type_demo_day">Demo Day</string>
    <string name="recent_event_type_kr_zone">氪空间</string>
    <string name="recent_event_type_invest">股权投资</string>
    <string name="recent_event_type_service">企业服务</string>
    <string name="recent_event_type_financing">极速融资</string>






    <string name="hello">Hello World, JPush!</string>
    <string name="tag_hint">Tag为大小写字母，数字，下划线,中文， 多个用以逗号分隔</string>
    <string name="alias_hint">Alias为大小写字母，数字，下划线</string>
    <string name="style_hint">style为数字</string>
    <string name="error_style_empty">style不能为空</string>
    <string name="error_alias_empty">alias不能为空</string>
    <string name="error_tag_empty">tag不能为空</string>
    <string name="error_tag_gs_empty">格式不对</string>
    <string name="error_network">网络连接异常,初始化失败 请检查网络！</string>
    <string name="logining">程序在后台执行, 请查看日志！</string>
    <string name="setting_su">设置成功</string>

    <!--<string name="app_name">umeng_example</string>-->
    <string name="umeng_share">分享</string>
    <string name="umeng_auth">授权</string>
    <string name="umeng_deleauth">清除对应授权</string>
    <string name="umeng_shake">摇一摇</string>
    <string name="umeng_comment">评论相关</string>
    <string name="umeng_openshare">打开分享面板</string>
    <string name="umeng_openshare_custom">打开自定义分享面板</string>
    <string name="umeng_sharebutton_custom">自定义分享按钮</string>
    <string name="umeng_share1">默认分享面板可编辑分享页</string>
    <string name="umeng_share2">自定义分享面板可编辑分享页</string>
    <string name="umeng_share3">单平台直接分享</string>
    <string name="umeng_share4">多平台直接分享</string>
    <string name="umeng_share5">默认分享面板可编辑分享页多平台</string>

    <string name="umeng_shakeshotscreen">摇一摇截屏</string>
    <string name="umeng_shakeshare">摇一摇分享</string>
    <string name="umeng_registershake">注册摇一摇</string>

    <string name="umeng_comment1">用户信息</string>
    <string name="umeng_comment2">本地登陆</string>
    <string name="umeng_comment3">本地授权</string>
    <string name="umeng_comment4">好友功能</string>
    <string name="umeng_comment5">评论功能</string>
    <string name="umeng_comment6">注销</string>
    <string name="umeng_comment7">解决事例</string>

    <string name="umeng_nativequery">本地登陆信息查询</string>
    <string name="umeng_loginsina">登陆新浪</string>
    <string name="umeng_logoutsina">登出新浪</string>
    <string name="umeng_loginqq">登陆QQ</string>
    <string name="umeng_logoutqq">登出QQ</string>
    <string name="umeng_loginqzone">登陆QQ空间</string>
    <string name="umeng_logoutzone">登出QQ空间</string>
    <string name="umeng_customlogin">自定义登陆</string>

    <string name="umeng_addfriend">添加好友</string>
    <string name="umeng_getfriendlist">获取好友列表</string>

    <string name="umeng_commentmodular">评论模块</string>
    <string name="umeng_getcommentlist">获取评论列表</string>
    <string name="umeng_sendcomment">发出评论</string>

    <string name="action_settings">设置</string>
    <string name="actionbar_activity_not_found">Failed to open intent...</string>
    <string name="share_by_weixin">微信分享</string>
    <string name="share_by_qq">QQ分享</string>
    <string name="share_by_yixin">易信分享</string>
    <string name="shake_share">注册摇一摇截图（分享）</string>
    <string name="shake_openshare">注册摇一摇（打开分享面板）</string>
    <string name="shake_scrshot">注册摇一摇（截图）</string>
    <string name="take_scrshot">直接截图</string>
    <string name="play">播放</string>
    <string name="pause">暂停</string>
    <string name="stop">停止</string>
    <string name="quit">退出</string>
    <string name="video_start_time">00:00</string>
    <string name="goto_video">摇一摇视频截图Activity</string>
    <string name="goto_game">游戏Activity</string>
    <string name="goto_common">普通Activity</string>
    <string name="video">VideoActivity</string>
    <string name="game">GameActivity</string>
    <string name="common">CommonActivity</string>
    <string name="back">返回</string>
    <string name="goto_facebook">添加Facebook分享</string>
    <string name="fb_login">Facebook登录</string>
    <string name="fb_logout">Facebook注销</string>
    <string name="fb_share">Facebook分享</string>
    <string name="laiwang_share">来往分享</string>
    <string name="instagram_share">Instagram分享</string>
    <string name="pocket_share">Pocket分享</string>
    <string name="linkedin_share">LinkedIn分享</string>
    <string name="foursquare_share">FourSquare分享</string>
    <string name="ynote_share">有道云笔记分享</string>
    <string name="evernote_share">印象笔记分享</string>
    <string name="pinterest_share">Pinterest分享</string>
    <string name="custom_platform_share">自定义平台分享</string>
    <string name="login_sina">登录（新浪微博）</string>
    <string name="logout_sina">注销登录（新浪微博）</string>
    <string name="login_qq">登录（QQ）</string>
    <string name="logout_qq">注销登录（QQ）</string>
    <string name="login_qzone">登录（QQ空间）</string>
    <string name="logout_qzone">注销登录（QQ空间）</string>
    <string name="whatsapp_share">whatsapp分享</string>
    <string name="line_share">line分享</string>
    <string name="tumblr_share">tumblr分享</string>
    <string name="kakao_share">Kakao Talk分享</string>
    <string name="flickr_share">flickr分享</string>
    <string name="fb_app_id">567261760019884</string>
    <string name="photo_post">Photo Post</string>
    <string name="success">Success</string>
    <string name="successfully_posted_post">Successfully posted \'%1$s\'.\nPost ID: %2$s</string>
    <string name="error">Error</string>
    <string name="status_update">Updating Facebook status at </string>
    <string name="ok">OK</string>
    <string name="cancelled">Cancelled</string>
    <string name="permission_not_granted">Unable to perform selected action because permissions were not granted.</string>
    <string name="facebook_app_id">487692214752558</string>
    <string name="perm">需要权限:</string>

</resources>
