<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group>

        <item
            android:id="@+id/navigation_header_item_back"
            android:icon="@mipmap/common_nav_icon_back"
            android:title=""></item>
        <item
            android:id="@+id/navigation_header_item_all"
            android:icon="@mipmap/menu_item_all"
            android:title="@string/news_all"></item>
        <item
            android:id="@+id/navigation_header_item_early"
            android:icon="@mipmap/menu_item_early"
            android:title="@string/news_early_item"></item>
        <item
            android:id="@+id/navigation_header_item_after_b_wheel"
            android:icon="@mipmap/news_after_b_wheel"
            android:title="@string/news_after_b_wheel"></item>
        <item
            android:id="@+id/navigation_header_item_big_company"
            android:icon="@mipmap/news_big_company"
            android:title="@string/news_big_company"></item>
        <item
            android:id="@+id/navigation_header_item_capital"
            android:icon="@mipmap/news_capital"
            android:title="@string/news_capital"></item>
        <item
            android:id="@+id/navigation_header_item_depth"
            android:icon="@mipmap/news_depth"
            android:title="@string/news_depth"></item>
        <item
            android:id="@+id/navigation_header_item_research"
            android:icon="@mipmap/news_research"
            android:title="@string/news_research"></item>
        <item
            android:id="@+id/navigation_header_item_tv"
            android:icon="@mipmap/menu_item_tv"
            android:title="@string/news_kr_tv"></item>
    </group>
</menu>