<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical"
    android:padding="@dimen/change_code_margin">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/register_title"
        android:textColor="@color/colorNewsItemNameAndTime"
        android:textSize="@dimen/register_fragment_text_size" />

    <!--<LinearLayout-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:layout_marginTop="50dp"-->
    <!--android:orientation="horizontal">-->

    <!--<TextView-->
    <!--android:layout_width="wrap_content"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:text="+86"-->
    <!--android:textSize="16sp"-->
    <!--android:paddingTop="15dp"-->
    <!--android:textColor="@color/colorTabBarText" />-->

    <!--<TextView-->
    <!--android:layout_width="1dp"-->
    <!--android:layout_height="match_parent"-->
    <!--android:layout_marginTop="15dp"-->
    <!--android:layout_marginLeft="10dp"-->
    <!--android:layout_marginRight="10dp"-->
    <!--android:background="#AEAEAE" />-->

    <!--<RelativeLayout-->
    <!--android:layout_width="0dp"-->
    <!--android:layout_weight="1"-->
    <!--android:layout_height="match_parent">-->

    <!--<TextView-->
    <!--android:id="@+id/register_fragment_phone_hint_tv"-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:text="手机号"-->
    <!--android:layout_marginTop="15dp"-->
    <!--android:textColor="@color/colorNewsItemNameAndTime"-->
    <!--android:textSize="16sp" />-->

    <!--<EditText-->
    <!--android:id="@+id/register_fragment_phone_et"-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:background="@null"-->
    <!--android:textCursorDrawable="@null"-->
    <!--android:textSize="16sp"-->
    <!--android:singleLine="true"-->
    <!--android:layout_marginTop="15dp"-->
    <!--android:visibility="gone"/>-->

    <!--</RelativeLayout>-->

    <!--<ImageView-->
    <!--android:id="@+id/register_fragment_phone_delete_iv"-->
    <!--android:layout_width="wrap_content"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:layout_marginTop="15dp"-->
    <!--android:clickable="true"-->
    <!--android:src="@mipmap/register_icon_delete"-->
    <!--android:visibility="gone"/>-->
    <!--</LinearLayout>-->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <TextView
                android:id="@+id/register_fragment_user_hint_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/mine_fragment_margin"
                android:text="@string/user_name"
                android:textColor="@color/colorNewsItemNameAndTime"
                android:textSize="@dimen/change_code_text_size" />

            <EditText
                android:id="@+id/register_fragment_user_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/mine_fragment_margin"
                android:background="@null"
                android:singleLine="true"
                android:textCursorDrawable="@null"
                android:textSize="@dimen/change_code_text_size"
                android:visibility="gone" />
        </RelativeLayout>

        <ImageView
            android:id="@+id/register_fragment_user_delete_iv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/mine_fragment_margin"
            android:clickable="true"
            android:src="@mipmap/login_icon_delete"
            android:visibility="gone" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_marginTop="@dimen/normal_margin"
        android:background="@color/login_fragment" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <TextView
                android:id="@+id/register_fragment_code_hint_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/change_code_margin"
                android:text="@string/password"
                android:textColor="@color/colorNewsItemNameAndTime"
                android:textSize="@dimen/change_code_text_size" />

            <EditText
                android:id="@+id/register_fragment_code_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/change_code_margin"
                android:background="@null"
                android:singleLine="true"
                android:textCursorDrawable="@null"
                android:textSize="@dimen/change_code_text_size"
                android:visibility="gone" />
        </RelativeLayout>


        <ImageView
            android:id="@+id/register_fragment_code_delete_iv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/change_code_margin"
            android:clickable="true"
            android:src="@mipmap/login_icon_delete"
            android:visibility="gone" />

        <CheckBox
            android:id="@+id/register_fragment_eye_iv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/mine_fragment_margin"
            android:layout_marginTop="@dimen/change_code_margin"
            android:background="@drawable/selector_eye"
            android:button="@null"
            android:clickable="true"
            android:visibility="gone" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_marginTop="@dimen/normal_margin"
        android:background="@color/login_fragment" />

    <TextView
        android:id="@+id/register_fragment_get_result_code_btn"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="@dimen/change_code_margin"
        android:background="@drawable/selector_button"
        android:gravity="center"
        android:text="@string/register"
        android:textColor="@drawable/selector_text" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:text="@string/agree_register"
        android:textColor="@color/colorNewsItemNameAndTime"
        android:textSize="@dimen/register_fragment_text_size" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/network_protocol"
            android:textColor="@color/colorTabBarText"
            android:textSize="@dimen/register_fragment_text_size" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/and"
            android:textSize="@dimen/register_fragment_text_size" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/privacy_policy"
            android:textColor="@color/colorTabBarText"
            android:textSize="@dimen/register_fragment_text_size" />
    </LinearLayout>
</LinearLayout>