<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@android:color/white">

    <include layout="@layout/title_bar_content" />

    <include layout="@layout/parting_line" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/setting_gap_height"
        android:layout_marginTop="@dimen/setting_gap_height"
        android:orientation="vertical">

        <include layout="@layout/parting_line" />

        <LinearLayout
            android:id="@+id/setting_aty_set_ll"
            android:layout_width="match_parent"
            android:layout_height="?android:attr/actionBarSize"
            android:background="@android:color/white"
            android:clickable="true"
            android:orientation="horizontal"
            android:paddingLeft="@dimen/setting_margin_screen"
            android:paddingRight="@dimen/setting_margin_screen">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:text="@string/message_setting"
                android:textSize="@dimen/setting_text_size" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:src="@mipmap/equity_icon_list_arrow" />
        </LinearLayout>

        <include layout="@layout/parting_line" />

    </LinearLayout>


    <include layout="@layout/parting_line" />

    <LinearLayout
        android:id="@+id/setting_aty_play_ll"
        android:layout_width="match_parent"
        android:layout_height="?android:attr/actionBarSize"
        android:background="@android:color/white"
        android:clickable="true"
        android:orientation="horizontal"
        android:paddingLeft="@dimen/setting_margin_screen"
        android:paddingRight="@dimen/setting_margin_screen">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:text="@string/video_wifi_setting"
            android:textSize="@dimen/setting_text_size" />

        <Switch
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:shadowColor="@android:color/holo_blue_bright"
            android:id="@+id/setting_aty_play_switch" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/setting_gap_height"
        android:orientation="vertical">

        <include layout="@layout/parting_line" />

        <LinearLayout
            android:id="@+id/setting_aty_clear_ll"
            android:layout_width="match_parent"
            android:layout_height="?android:attr/actionBarSize"
            android:background="@android:color/white"
            android:clickable="true"
            android:orientation="horizontal"
            android:paddingLeft="@dimen/setting_margin_screen"
            android:paddingRight="@dimen/setting_margin_screen">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:layout_weight="1"
                android:text="@string/clean_cache"
                android:textSize="@dimen/setting_text_size" />

            <TextView
                android:id="@+id/setting_aty_cache_size"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="0K" />
        </LinearLayout>

        <include layout="@layout/parting_line" />

    </LinearLayout>

    <include layout="@layout/parting_line" />

    <LinearLayout
        android:id="@+id/setting_aty_about_ll"
        android:layout_width="match_parent"
        android:layout_height="?android:attr/actionBarSize"
        android:background="@android:color/white"
        android:clickable="true"
        android:orientation="horizontal"
        android:paddingLeft="@dimen/setting_margin_screen"
        android:paddingRight="@dimen/setting_margin_screen">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:text="@string/about_36kr"
            android:textSize="@dimen/setting_text_size" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:src="@mipmap/equity_icon_list_arrow" />
    </LinearLayout>

    <include layout="@layout/parting_line" />

    <LinearLayout
        android:id="@+id/setting_aty_new_version_ll"
        android:layout_width="match_parent"
        android:layout_height="?android:attr/actionBarSize"
        android:background="@android:color/white"
        android:clickable="true"
        android:orientation="horizontal"
        android:paddingLeft="@dimen/setting_margin_screen"
        android:paddingRight="@dimen/setting_margin_screen">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:text="@string/check_new_version"
            android:textSize="@dimen/setting_text_size" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:src="@mipmap/equity_icon_list_arrow" />
    </LinearLayout>

    <include layout="@layout/parting_line" />


    <LinearLayout
        android:id="@+id/setting_aty_advice_ll"
        android:layout_width="match_parent"
        android:layout_height="?android:attr/actionBarSize"
        android:background="@android:color/white"
        android:clickable="true"
        android:orientation="horizontal"
        android:paddingLeft="@dimen/setting_margin_screen"
        android:paddingRight="@dimen/setting_margin_screen">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:text="@string/advise"
            android:textSize="@dimen/setting_text_size" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:src="@mipmap/equity_icon_list_arrow" />
    </LinearLayout>

    <include layout="@layout/parting_line" />

</LinearLayout>